# SeekerDungeon

./: .gitignore  AGENTS.md  README.md
Assets/: ItemRegistry.asset  URP2d.asset  URP2d_Renderer.asset  UniversalRenderPipelineGlobalSettings.asset
Docs/: architecture-recommendations.md  current-game-state-and-logic.md  (+16 more)
solana-program/programs/chaindepth/: Cargo.toml
solana-program/programs/chaindepth/src/: errors.rs  events.rs  lib.rs
solana-program/programs/chaindepth/src/instructions/: abandon_job.rs  accept_duel_challenge.rs  add_inventory_item.rs  begin_session.rs  boost_job.rs  claim_job_reward.rs  complete_job.rs  consume_duel_randomness.rs  create_duel_challenge.rs  create_player_profile.rs  decline_duel_challenge.rs  end_session.rs  ensure_start_room.rs  enter_dungeon.rs  equip_item.rs  exit_dungeon.rs  expire_duel_challenge.rs  force_exit_on_death.rs  force_reset_season.rs  init_global.rs  join_boss_fight.rs  join_job.rs  join_job_with_session.rs  leave_boss_fight.rs  loot_boss.rs  loot_chest.rs  mod.rs  move_player.rs  remove_inventory_item.rs  reset_my_player.rs  reset_player_for_testing.rs  reset_season.rs  session_auth.rs  set_player_skin.rs  tick_boss_fight.rs  tick_job.rs  unlock_door.rs
solana-program/programs/chaindepth/src/state/: boss_fight.rs  duel_challenge.rs  global.rs  helper_stake.rs  inventory.rs  mod.rs  player.rs  player_profile.rs  room.rs  room_generation.rs  room_presence.rs  scoring.rs  session_authority.rs  storage.rs
solana-program/vrf-poc/programs/vrf_poc/: Cargo.toml
solana-program/vrf-poc/programs/vrf_poc/src/: lib.rs
(+263 files in other folders)
