[package]
name = "chaindepth"
version = "0.1.0"
description = "ChainDepth - Shared onchain dungeon mining game for Seeker"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chaindepth"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

# Pin blake3 to avoid Edition 2024 requirement
blake3 = "=1.5.5"
