[package]
name = "vrf_poc"
version = "0.1.0"
description = "Standalone VRF proof-of-concept program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vrf_poc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-vrf-sdk = { version = "0.2.1", features = ["anchor"] }
blake3 = "=1.5.5"
